set donors up with usdc

--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
+    "hardhat-contract-sizer": "^2.5.1",
     "hardhat-gas-reporter": "^1.0.4",
-    "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.27",
+    "prettier": "^2.3.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "progress": "^2.0.3",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^9.1.0",
