--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@opengsn/gsn": "^2.1.0",
     "@openzeppelin/contracts": "^4.4.2",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
+    "@rari-capital/solmate": "^6.4.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@types/chai": "^4.2.21",
     "@types/cli-progress": "^3.9.0",
