--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@opengsn/contracts": "^2.2.6",
     "@opengsn/gsn": "^2.1.0",
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.7.0",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
     "@rari-capital/solmate": "^6.4.0",
     "@typechain/ethers-v5": "^9.0.0",
@@ -57,7 +57,8 @@
     "@typechain/hardhat": "^4.0.0",
     "@types/cli-progress": "^3.9.0",
     "@types/node": "^14.14.11",
-    "@types/progress": "^2.0.5"
+    "@types/progress": "^2.0.5",
+    "erc721a": "^4.1.0"
   },
   "scripts": {
     "ci-test": "NODE_ENV=test && hardhat test ",
