--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "progress": "^2.0.3",
     "solidity-coverage": "^0.7.21",
-    "ts-node": "^9.1.0",
+    "ts-node": "10.8.1",
     "typechain": "^7.0.0",
     "typescript": "^4.5.2"
   },
